Github Pages - ASCII Player scrollbar fix

--- a/src/index.css
+++ b/src/index.css
@@ -68,11 +68,10 @@ body {
   word-wrap: normal;
   word-break: keep-all;
   overflow-wrap: normal;
-  margin: 0 auto;
-  text-align: center;
-  width: 100%; 
-  max-width: fit-content;
+  margin: 0;
+  text-align: left;
+  width: fit-content;
   transform: scaleX(0.85);
-  transform-origin: center;
+  transform-origin: left center;
 }
 
